# lazy-pr

./: README.md  main.py  pyproject.toml  todos.md
.claude/: settings.json
.claude/commands/: ci.md
.github/workflows/: ci.yaml  ci.yml  publish.yaml  release.yml
scripts/: ci
