[project]
name = "lazy-pull-request"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "pygithub>=2.9.1",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
